# gui_framework

./: CMakeLists.txt  main.cpp
lib/webview/: CMakeLists.txt
src/: GuiFramework.hpp  comp.cpp  comp.hpp  main.cpp
